Fix styling and whitespace

--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -286,4 +286,9 @@
   background-color: white;
   background-clip: content-box;
   box-shadow: inset 0 0 0 10px white;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  width: 30%;
+  height: 5%;
 }
